1.6600: Tue Jun 23 17:39:58 EDT 2009
   - installed a lotta DRY on the two vector classes, will
     continue this tonight and on lunch break most likely.
   - worked on the docs, they need a good deal of work
   - noticed a half-way implemented set_vector fill-disabler, why
     isn't it finished?
     - added a query_fill to check to see if a vector is full
     - made sure the _OVB and _TVB base classes know about the
       half implemented fill disabler

1.6600: Mon Jun 22 18:51:33 EDT 2009
   - started added best practices stuff to the dist

1.6500: Fri May 29 07:00:10 EDT 2009
   - I get asked, "does S::B handle missing values?" quite a lot.
   - YES IT DOES! (now)

1.6007: Sat May  2 07:09:12 EDT 2009
   - fixed copyright information on request
   - fixed various docbugs
   - finished a thought about outliers

1.6005: Thu Mar 26 12:22:23 EDT 2009
   - META.yml stuff

1.6004: Sun Mar  1 07:15:37 EST 2009
   - doc bug found by Raj Chandran

1.6003: Sun Feb  8 17:21:39 EST 2009
   - perl 5.8.0 can't deal with this program, requiring 5.8.1:

     my $o = bless {v1=>1, v2=>2}, "class";
     print "K:$_; V:$o->{$_}\n" for keys %$o;
     print "K:$_; V:$o->{$_}\n" for qw(v1 v2 v3);

1.6002: Mon Jan 19 07:16:55 EST 2009
   - I'm skipping the t/60_ tests without recent versions of
     Math::BigFloat.  No idea what causes the problems, but since
     the module isn't required, it doesn't even tell me the
     version of the module.
   - Perl's locale support is embarrassingly buggy.  Under
     certain conditions, Number::Format will die because perl's
     POSIX getlocale stuff returns some (but not all) of certain
     locales.  This stuff is reproducible on almost any
     machine, so I didn't bother to report it.  WRW installed a
     fix in NF 1.61(a) that sets the thousands_sep to "" when
     it's the same as the decimal_point.  Fixed (sorta).

1.6001: Thu Nov  6 07:06:24 EST 2008
   - noted the population vs sample issue (again)
